2002-05-21  Morten Welinder  <terra@diku.dk>

	* src/func-builtin.c (func_builtin_init, shutdown_cat): Use plain
	function_get_category.

	* src/func.c (function_get_category): Don't use NULL as translated
	name -- translate!
	(function_add_placeholder): Use plain function_get_category.

2002-05-21  Morten Welinder  <terra@diku.dk>

	* src/func.c (function_def_get_arg_name): Fix char/string type
	mismatch.  Bad Andreas!
	(functions_shutdown): Remove stubs for unknown functions.
	(function_add_placeholder): Keep track of unknown functions.

	* configure.in: Refuse to compile with gcc 2.96.

2002-05-20  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* schemas/gnumeric-dialogs.schemas : add 2 printer schemas
	* src/gnumeric-gconf-priv.h : add printer keys
	* src/gnumeric-gconf.c : add printer get/set methods
	* src/gnumeric-gconf.h : ditto
	* src/print.c (print_job_info_set_one_time_defaults) : add 2 settings
	(print_job_info_save_one_time_defaults) : ditto

2002-05-19  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/commands.c (cmd_print_setup_redo) : dirty all sheets if
	  parent.sheet == NULL

2002-05-16  Jon K Hellan  <hellan@acm.org>

	* src/workbook-control-component.c (wbcc_set_sensitive): New
	(wbcc_menu_state_sensitivity): Remove
	(workbook_control_component_ctor_class): Register
	wbcc_set_sensitive and remove wbcc_menu_state_sensitivity.

2002-05-16  Jody Goldberg <jody@gnome.org>

	* src/workbook-view.c (wb_view_open) : Use wb_control_set_sensitive.

	* src/workbook-control-priv.h :
	  remove menu.set_sensitivity
	  add set_sensitive
	* src/workbook-control.[ch] : ditto.

	* src/workbook-control-gui.c (cb_thaw_ui_toolbar) : call
	  wbcg_menu_state_sensitivity directly.
	(wbcg_edit_set_sensitive) : ditto.
	(wbcg_set_sensitive) : new.
	(workbook_control_gui_ctor_class) : register wbcg_set_sensitive and
	  remove wbcg_menu_state_sensitivity.

2002-05-15  Andreas J. Guelzow <aguelzow@taliesin.ca>
	* src/print-info.c (print_info_set_margin_right) : remove some